deploy-k8s/deployement-main-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-service
  namespace: dev
  annotations:
    kubernetes.io/change-cause: "Deploy main service"
spec:
  minReadySeconds: 3
  replicas: 3
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - main-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: main-service-pod
      labels: 
        app: main-service-app
    spec:
      containers:
        - image: 984912521466.dkr.ecr.ap-south-1.amazonaws.com/main-service:$(IMAGE_TAG)
          name: main-service
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "150m"
              memory: "100Mi"
            limits: 
              cpu: "200m"
              memory: "150Mi"
