deploy-k8s/deployment-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: dev
  annotations:
    kubernetes.io/change-cause: "Deploy product service"
spec:
  minReadySeconds: 3
  replicas: 3
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - product-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: product-service-pod
      labels: 
        app: product-service-app
    spec:
      containers:
        - image: 984912521466.dkr.ecr.ap-south-1.amazonaws.com/product-service:v1.0.55
          name: product-service
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "150m"
              memory: "100Mi"
            limits: 
              cpu: "200m"
              memory: "150Mi"
