deploy-k8s/deployment-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: dev
  annotations:
    kubernetes.io/change-cause: "Deploy user service"
spec:
  minReadySeconds: 3
  replicas: 3
  selector:
    matchExpression:
      - key: app
        opeartor: In
        values:
          - user-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: user-service-pod
      labels: 
        app: user-service-app
    spec:
      containers:
        - image: 984912521466.dkr.ecr.ap-south-1.amazonaws.com/nikhil-shop-docker-images:user-service
          name: user-service
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            request:
              cpu: "150m"
              storage: "100Mi"
            limits: 
              cpu: "200m"
              storage: "150Mi"
