deploy-k8s/deployement-svc-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service-svc-deployemnt
  namespace: dev
spec:
  type: NodePort
  selector:
    app: cart-service-app
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31211
