deploy-k8s/deployement-svc-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service-svc-deployemnt
  namespace: dev
spec:
  type: NodePort
  selector:
    app: main-service-app
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31212
