deploy-k8s/deployment-svc-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-svc-deployemnt
  namespace: dev
spec:
  type: NodePort
  selector:
    app: order-service-app
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31213
