deploy-k8s/deployment-svc-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc-deployemnt
  namespace: dev
spec:
  type: NodePort
  selector:
    app: product-service-app
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31214
