deploy-k8s/deployment-svc-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc-deployemnt
  namespace: dev
spec:
  type: NodePort
  selector:
    app: user-service-app
  ports:
    - port: 80
      protocol: TCP
      nodePort: 31215
