deploy-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: mysitedesign.site
      http: 
        paths:
          - path: /cart-service
            pathType: Prefix
            backend:
              service:
                name: cart-service-svc-deployemnt
                port:
                  number: 80
          - path: /main-service
            pathType: Prefix
            backend:
              service:
                name: main-service-svc-deployemnt
                port:
                  number: 80
          
          - path: /order-service
            pathType: Prefix
            backend:
              service:
                name: order-service-svc-deployemnt
                port:
                  number: 80
          
          - path: /product-service
            pathType: Prefix
            backend:
              service:
                name: product-service-svc-deployemnt
                port:
                  number: 80
          
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service-svc-deployemnt
                port:
                  number: 80
